--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
                     <div class="box-4 text-center">
                         <i class="icofont-music-note text-center"></i>
-                        <h3 class="text-center">Audio Player</h3>
+                        <h3 class="text-center">Audio Cassettes</h3>
                         <p>Music is the medicine which cured our inner and outer problems which music will be as
                             lullaby, motivational, and lovable with us.</p>
                     </div>
